# nix-api-rs

./: .gitignore  Cargo.toml  flake.nix
data/: Cargo.toml
data/src/nixpkgs-hashes/: main.rs  nixpkgs-release.nix
data/src/nixpkgs-hashes/npins/: sources.json
src/: hash.rs  lib.rs
src/fetchers/: git.rs  mod.rs
src/flake/: lock.rs
