[package]
name = "nixapi"
description = "Select Nix (internal) APIs implemented in Rust"
repository = "https://github.com/spikespaz/nixapi-rs"
homepage = "https://github.com/spikespaz/nixapi-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["nix", "flake", "lock"]
categories = ["data-structures", "algorithms"]

publish = false

[dependencies]
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_path_to_error = "0.1.16"
url = "2.5.7"
