[package]
name = "nixapi"
description = "Select Nix (internal) APIs implemented in Rust"
repository = "https://github.com/spikespaz/nixapi-rs"
homepage = "https://github.com/spikespaz/nixapi-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["nix", "flake", "lock"]
categories = ["data-structures", "algorithms"]

publish = false

[dependencies]
data-encoding = "2.9.0"
data-encoding-macro = "0.1.18"
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
serde_path_to_error = "0.1.16"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
url = "2.5.7"

[dev-dependencies]
blake3 = { version = "1.8.2", features = ["traits-preview"] }
digest = "0.10.7"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.9"
test-case = "3.3.1"
